src/test/ui/resolve/resolve-self-in-impl.stderr
error[E0391]: cycle detected when computing type of `<impl at $DIR/resolve-self-in-impl.rs:14:1: 14:20>`
  --> $DIR/resolve-self-in-impl.rs:14:13
   |
LL | impl Tr for Self {}
   |             ^^^^
   |
   = note: ...which again requires computing type of `<impl at $DIR/resolve-self-in-impl.rs:14:1: 14:20>`, completing the cycle
note: cycle used when collecting item types in top-level module
  --> $DIR/resolve-self-in-impl.rs:1:1
   |
LL | / #![feature(associated_type_defaults)]
LL | |
LL | | struct S<T = u8>(T);
LL | | trait Tr<T = u8> {
...  |
LL | |
LL | | fn main() {}
   | |____________^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
